@@ -814,10 +814,12 @@ that `read' can handle, whenever this is possible."
 
 
 (defsubst wl-biff-notify (new-mails notify-minibuf)
-  (when (and (not wl-modeline-biff-status) (> new-mails 0))
-    (run-hooks 'wl-biff-notify-hook))
-  (when (and wl-modeline-biff-status (eq new-mails 0))
-    (run-hooks 'wl-biff-unnotify-hook))
+  ;; run notify/unnotify hooks depending on current status and new mails
+  (if wl-modeline-biff-status
+      (when (zerop new-mails)
+        (run-hooks 'wl-biff-unnotify-hook))
+    (when (> new-mails 0)
+      (run-hooks 'wl-biff-notify-hook)))
   (setq wl-modeline-biff-status (> new-mails 0))
   (force-mode-line-update t)
   (when notify-minibuf
